# django-extensions-too

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.md  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  conftest.py  deprecated_setup.py  fabfile.py  md2rst.py  pyproject.toml  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  tox.ini
django_extensions_too/: __init__.py
django_extensions_too/management/commands/: delete_unreferenced_files.py  fix_proxy_permissions.py  get_all_permissions.py  manifest_storage_check.py  missing_files.py  remove_app.py
django_project/: README.md  settings.py  urls.py
django_project/myapp/: admin.py  apps.py  models.py
django_project/myapp/migrations/: 0001_initial.py  0002_fakemodel_delete_testmodel.py  0003_fakeproxymodel.py
docs/: mkdocs.yml
docs/docs/: index.md
docs/site/: index.html  sitemap.xml
docs/site/mkdocs/: search_index.json
src/django_extensions_too/management/: color.py
src/django_extensions_too/management/commands/: add_proxy_permissions.py  delete_unreferenced_files.py  fix_proxy_permissions.py  get_all_permissions.py  manifest_storage_check.py  missing_files.py  remove_app.py
tests/: README.md  settings.py  test_add_proxy_permissions.py  test_color.py  test_commands.py  test_delete_unreferenced_files.py  test_django-extensions-too.py  test_get_all_permissions.py  test_missing_files.py  urls.py
tests/example/: urls.py
tests/myapp/: admin.py  apps.py  models.py
